--- a/MyScriptureJournal/MyScriptureJournal.csproj
+++ b/MyScriptureJournal/MyScriptureJournal.csproj
@@ -98,6 +98,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AddJournalEntry.cshtml" />
+    <Content Include="EditJournalEntry.cshtml" />
+    <Content Include="DeleteJournalEntry.cshtml" />
     <None Include="packages.config" />
     <Content Include="ScriptureJournalMain.cshtml" />
     <None Include="Web.Debug.config">
